# music-selector

./: README.md  dockerfile  pyproject.toml
src/: client.py  client2.py  main.py
tests/: test_client.py  test_client_2.py
